discord-frontend/hartex-discord-commands-test/tests/ui/unexpected_end_of_parameter.stderr
error: unexpected end of parameter
  --> tests/ui/unexpected_end_of_parameter.rs:26:12
   |
26 | #[metadata(name)]
   |            ^^^^

error: unexpected end of parameter
  --> tests/ui/unexpected_end_of_parameter.rs:30:17
   |
30 | #[metadata(name =)]
   |                 ^
